# Alldesk

./: .gitignore  Alldesk-onedir.spec  Alldesk-onefile.spec  Alldesk.json  Alldesk.py  Alldesk.spec  Alldesk.xlsx  Alldesk_onedir.spec  Alldesk_onefile.spec  CHANGELOG.md  README.md  VNCdesk.py  lioil.icns  pyproject.toml  release_notes_v2026.01.20.md  requirements.txt  to_delete.txt  vnc.csv  vnc.vnc
.github/workflows/: build-release.yml
bat/: anydesk_start.bat  rustdesk_start.bat
exe/: vnc.vnc
