[project]
name = "alldesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes==1.4.14",
    "pywin32==311; sys_platform == 'win32'",
    "pywinauto==0.6.9; sys_platform == 'win32'",
    "setuptools==80.9.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
